force-app/main/default/objects/Session_Booth__c/Session_Booth__c.object-meta.xml
<CustomObject>
    <label>Session/Booth</label>
    <nameField>
        <label>Session/Booth Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions/Booths</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>