force-app/main/default/objects/Session_Booth__c/fields/Password_Used__c.field-meta.xml
<CustomField>
    <fullName>Password_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Password Used</label>
    <type>Checkbox</type>
</CustomField>