force-app/main/default/objects/Session_Booth__c/fields/Trailblazer_Event__c.field-meta.xml
<CustomField>
    <fullName>Trailblazer_Event__c</fullName>
    <label>Trailblazer Event</label>
    <referenceTo>Trailblazer_Event__c</referenceTo>
    <relationshipName>Sessions_Booths</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>